# AgenticAI_Chatbot

./: README.md
bot/: README.md  agent.py  data.py  file_loader.py  mcp_server.py  model.py  pyproject.toml  rate_limit.py  tools.py
bot/description/: Results.xlsx
bot/intent_agent/: agent.py  description.md  instructions.md
bot/notebooks/: BankingBot_MultiAgent.ipynb  BankingBot_SingleAgent.ipynb
bot/orchestrator_agent/: agent.py  description.md  instructions.md
bot/susp_tx_agent/: agent.py  description.md  instructions.md
