[project]
name = "banking-chatbot"
version = "0.1.0"
description = "Customer-facing banking chatbot using Google ADK"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.18.0",
    "google-genai>=1.0.0",
    "pandas>=2.0.0,<3.0.0",
    "pydantic>=2.0.0",
    "fastmcp>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]

[tool.setuptools.package-data]
"*" = ["*.md"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
